--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -641,10 +641,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "97aff931",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID     student_name gender grade        school_name  reading_score  \\\n",
+       "0           0     Paul Bradley      M   9th  Huang High School           66.0   \n",
+       "1           1     Victor Smith      M  12th  Huang High School           94.0   \n",
+       "2           2  Kevin Rodriguez      M  12th  Huang High School           90.0   \n",
+       "3           3    Richard Scott      M  12th  Huang High School           67.0   \n",
+       "4           4       Bonnie Ray      F   9th  Huang High School           97.0   \n",
+       "\n",
+       "   math_score  School ID      type  size   budget  \n",
+       "0        79.0          0  District  2917  1910635  \n",
+       "1        61.0          0  District  2917  1910635  \n",
+       "2        60.0          0  District  2917  1910635  \n",
+       "3        58.0          0  District  2917  1910635  \n",
+       "4        84.0          0  District  2917  1910635  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Combine the data into a single dataset\n",
     "school_data_complete_df = pd.merge(student_data_df, school_data_df, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
@@ -653,22 +783,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3ab4945f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the Totals (Schools and Students)\n",
     "school_count = len(school_data_complete_df[\"school_name\"].unique())\n",
     "student_count = school_data_complete_df[\"Student ID\"].count()\n",
     "\n",
-    "# Calculate the Total Budget\n",
-    "total_budget = school_data_df[\"budget\"].sum()"
+    "school_count\n",
+    "student_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "53d87886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the Total Budget\n",
+    "total_budget = school_data_df[\"budget\"].sum()\n",
+    "\n",
+    "total_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "d3def572",
    "metadata": {},
    "outputs": [],
@@ -680,48 +845,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9127c6d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "461"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
-    "\n",
-    "\n",
-    "# Get the total student count \n",
-    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
-    "\n",
-    "\n",
-    "# Step 2. Subtract the number of students that are in ninth grade at \n",
-    "# Thomas High School from the total student count to get the new total"
+    "student_count_thomas = school_data_complete_df.loc[(school_data_complete_df[\"school_name\"] == \"Thomas High School\") & (school_data_complete_df[\"grade\"] == \"9th\"), \"Student ID\"].count()\n",
+    "student_count_thomas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "18eb6d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the total student count \n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3fa6e432",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38709"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 2. Subtract the number of students that are in ninth grade at \n",
+    "# Thomas High School from the total student count to get the new total\n",
+    "student_count_new = student_count - student_count_thomas\n",
+    "student_count_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "b23b43a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28939"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the passing rates using the \"clean_student_data\".\n",
     "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
-    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]"
+    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "passing_math_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "492994e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.76039164018704"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step 3. Calculate the passing percentages with the new total student count.\n"
+    "# Step 3. Calculate the passing percentages with the new total student count.\n",
+    "passing_math_percentage = (passing_math_count/student_count_new)*100\n",
+    "passing_reading_percentage = (passing_reading_count/student_count_new)*100\n",
+    "passing_math_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "393555ef",
    "metadata": {},
    "outputs": [],
@@ -734,25 +977,86 @@
     "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
     "\n",
     "\n",
-    "# Step 4.Calculate the overall passing percentage with new total student count.\n"
+    "# Step 4.Calculate the overall passing percentage with new total student count.\n",
+    "overall_passing_percentage = (overall_passing_math_reading_count/student_count_new)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7cb79dc1",
+   "execution_count": 28,
+   "id": "29355707",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>81.9</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>64.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00               78.9   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.9           74.8              85.7              64.9  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a DataFrame\n",
     "district_summary_df = pd.DataFrame(\n",
-    "          [{\"Total Schools\": school_count, \n",
-    "          \"Total Students\": student_count, \n",
-    "          \"Total Budget\": total_budget,\n",
-    "          \"Average Math Score\": average_math_score, \n",
-    "          \"Average Reading Score\": average_reading_score,\n",
-    "          \"% Passing Math\": passing_math_percentage,\n",
-    "         \"% Passing Reading\": passing_reading_percentage,\n",
+    "        [{\"Total Schools\": school_count, \n",
+    "        \"Total Students\": student_count, \n",
+    "        \"Total Budget\": total_budget,\n",
+    "        \"Average Math Score\": average_math_score, \n",
+    "        \"Average Reading Score\": average_reading_score,\n",
+    "        \"% Passing Math\": passing_math_percentage,\n",
+    "        \"% Passing Reading\": passing_reading_percentage,\n",
     "        \"% Overall Passing\": overall_passing_percentage}])\n",
     "\n",
     "\n",
@@ -845,7 +1149,7 @@
     "    \"% Overall Passing\": per_overall_passing_percentage})\n",
     "\n",
     "\n",
-    "# per_school_summary_df.head()"
+    "per_school_summary_df.head()"
    ]
   },
   {
